--- a/src/markdown/mas/inlezen_MAS_data.Rmd
+++ b/src/markdown/mas/inlezen_MAS_data.Rmd
@@ -351,3 +351,25 @@ mas_soortgrp <- mas_distance %>%
   filter(soortgrp %in% 1:2)
 ```
 
+## Dubbeltellingen
+
+verwijder dubbeltellingen
+
+## Overzicht
+
+aantal telpunten en waarnemingen per jaar per streek
+
+
+# Berekening specifieke variabelen
+## Status teller
+
+voeg status teller toe als variabele (vrijwilligers vs. professionele teller)
+
+## Predator
+
+voeg predator toe als variabele (ja vs. nee)
+
+# Uitschrijven data
+
+schrijf data weg
+
