--- a/src/markdown/mas/inlezen_MAS_data.Rmd
+++ b/src/markdown/mas/inlezen_MAS_data.Rmd
@@ -233,7 +233,8 @@ mas_telperiodes <- mas_31370_pipeline %>%
       datum %within% interval(
         ymd(paste(jaar, r4_start, sep = "-")),
         ymd(paste(jaar, r4_stop, sep = "-"))) ~ "R4"
-    ))
+    )) %>%
+  filter(!is.na(periode_in_jaar))
 ```
 
 We selecteren de telpunten **binnen de perimeter van het piloomeetnet**. We hebben dus een lijst nodig met alle plots die geteld zijn met coördinaten.
@@ -353,17 +354,37 @@ mas_soortgrp <- mas_distance %>%
 
 ## Dubbeltellingen
 
-verwijder dubbeltellingen
+Voor de waarnemingen verwijderen we dubbeltellingen. Indien binnen een jaar op meerdere teldagen binnen eenzelfde telperiode werd geteld, wordt de laatste teldag genomen.
 
-## Overzicht
+> waarom laatste teldag? beter van profs behouden?
 
-aantal telpunten en waarnemingen per jaar per streek
+```{r}
+dubbels <- mas_soortgrp %>%
+  st_drop_geometry() %>%
+  group_by(plotnaam, jaar, periode_in_jaar) %>%
+  summarize(aantal_teldagen = n_distinct(doy),
+            .groups = "drop") %>%
+  filter(aantal_teldagen > 1)
+
+dubbels %>%
+  kable
+```
+
+```{r}
+mas_clean <- mas_soortgrp %>%
+  semi_join(dubbels, by = c("plotnaam", "jaar", "periode_in_jaar")) %>%
+  group_by(plotid, jaar, periode_in_jaar) %>%
+  filter(doy == max(doy)) %>%
+  ungroup() %>%
+  bind_rows(mas_soortgrp %>%
+              anti_join(dubbels, by = c("plotnaam", "jaar", "periode_in_jaar")))
+```
 
 
 # Berekening specifieke variabelen
 ## Status teller
 
-voeg status teller toe als variabele (vrijwilligers vs. professionele teller)
+
 
 ## Predator
 
@@ -399,6 +420,20 @@ stopifnot(all(mas_controle_afstand$abs_verschil < 1.5))
 ```{r}
 stopifnot(all(complete.cases(design_2018_2022)))
 ```
+
+## Overzicht
+
+Aantal telpunten:
+
+Aantal waarnemingen:
+
+```{r}
+mas_soortgrp %>%
+  st_drop_geometry() %>%
+  count(plotnaam, jaar, periode_in_jaar) %>%
+  arrange(plotnaam, jaar, periode_in_jaar)
+```
+
 
 # Uitschrijven data
 
